Updated metadata for website description on Google

--- a/vext-games/public/index.html
+++ b/vext-games/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="VEXT Games is a game development studio with the focus of creating a diverse range of games
+      that resonates with players from various backgrounds. We strive to craft games that are both visually captivating
+      and also rich in distinctive gameplay and interactions, having an appeal for both casual and hardcore enthusiasts."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
